--- a/Calendar/Calendar_Web_App/css/style.css
+++ b/Calendar/Calendar_Web_App/css/style.css
@@ -142,6 +142,11 @@ th {
   color: white;
 }
 
+th:first-child,
+th:last-child {
+  color: lightsalmon;
+}
+
 td {
   width: 2.38em;
   height: 2.38em;
@@ -171,6 +176,11 @@ td:hover {
   height: 95%;
 }
 
+.p_data_content{
+  color: black; 
+  font-size: 20px;
+}
+
 .other_month {
   background: none;
   color: rgba(175, 175, 175, 0.45);
@@ -195,4 +205,32 @@ button {
   font-size: 35px;
   font-weight: 400;
   color: white;
+}
+
+button:first-child{
+  animation: display_button_back 1s ease; 
+  position: relative;
+}
+
+button:first-child img{
+  content: url(../../media/left-arrow-line-symbol.svg);
+}
+
+
+button:not(:first-child):not(:last-child){
+  animation: display_opacity_zoom 1s ease-out;
+}
+
+button:last-child{
+  animation: display_button_next 1s ease; 
+  position: relative;
+}
+
+button:last-child img{
+  content: url(../../media/right-arrow-angle.svg);
+}
+
+.arrow_img{
+  width: 35px; 
+  height: 35px"
 }
