--- a/Calendar/Calendar_Web_App/css/style.css
+++ b/Calendar/Calendar_Web_App/css/style.css
@@ -18,19 +18,11 @@ body {
 
 @keyframes display_data {
   0% {
-    transform: scale3d(0.25, 0, 1);
-  }
-  25% {
-    transform: scale3d(0.5, 0, 1);
-  }
-  50% {
-    transform: scale3d(0.1, 0, 1);
-  }
-  75% {
-    transform: scale3d(0.1, 1.2, 1);
+    transform: scale3d(0, 1, 1);
   }
   100% {
-    transform: scale3d(1, 1, 1);
+  transform: scale3d(1, 1, 1);
+
   }
 }
 @keyframes opacity {
@@ -111,7 +103,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  animation: display_opacity_zoom 1s ease-out;
+  /* animation: display_opacity_zoom 1s ease-out; */
 }
 
 .year_title {
@@ -142,7 +134,7 @@ body {
   margin-top: 10px;
   width: 100%;
   height: 50%;
-  animation: opacity 1s ease-in-out;
+  /* animation: opacity 1s ease-in-out; */
 }
 
 table {
@@ -190,7 +182,7 @@ td:hover {
   background-color: white;
   border: none;
   border-radius: 5px;
-  animation: display_data 1s ease;
+  /* animation: display_data 2s ease; */
 }
 
 .other_month {
@@ -224,7 +216,7 @@ button:hover{
 }
 
 button:first-child{
-  animation: display_button_back 1s ease; 
+  /* animation: display_button_back 1s ease;  */
   position: relative;
 }
 
@@ -234,11 +226,11 @@ button:first-child img{
 
 
 button:not(:first-child):not(:last-child){
-  animation: display_opacity_zoom 1s ease-out;
+  /* animation: display_opacity_zoom 1s ease-out; */
 }
 
 button:last-child{
-  animation: display_button_next 1s ease; 
+  /* animation: display_button_next 1s ease;  */
   position: relative;
 }
 
@@ -266,12 +258,12 @@ button:last-child img{
   background: white;
   justify-content: space-between;
   align-items: flex-start;
-  animation: display_schedule .3s ease;
+  /* animation: display_schedule .3s ease; */
 }
 
 .schedule_close{
-  animation: close_schedule .3s ease;
-  animation-fill-mode: forwards;
+  /* animation: close_schedule .3s ease;
+  animation-fill-mode: forwards; */
   /* #87FFA7 <= Color for schedules */
 }
 
