--- a/Calendar/Calendar_Web_App/css/style.css
+++ b/Calendar/Calendar_Web_App/css/style.css
@@ -254,6 +254,7 @@ button:last-child img{
   height: 80vh;
   position: absolute;
   display: flex;
+  flex-direction: column;
   border-radius: 5px;
   background: white;
   justify-content: space-between;
@@ -282,6 +283,64 @@ button:last-child img{
 
 .close_button span:hover{
   cursor: pointer;
+}
+
+form{    
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 25px;
+}
+
+.schedule_button_div, .schedule_time_div, .schedule_title_div, .schedule_description_div {
+  width: 100%;
+  height: 50px;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+
+input{
+  width: 100%;
+  font-size: 22px;
+  border: 2px black solid;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+}
+.schedule_time_div{
+  height: 180px;
+}
+
+.schedule_time_div input{
+  width: 150px;
+  height: 50px;
+}
+
+.schedule_description_div {
+  height: 150px;
+}
+
+.schedule_description_div input{
+  height: 90%;
+}
+
+.schedule_button_div{
+  justify-content: center;
+  align-items: center;
+}
+
+.schedule_button_div button{
+  font-size: 20px;
+  color: black;
+  border: 2px black solid;
+  width: 30%;
+
 }
 
 
