--- a/Calendar/Calendar_Web_App/css/style.css
+++ b/Calendar/Calendar_Web_App/css/style.css
@@ -264,10 +264,10 @@ button:first-child img{
   content: url(../../media/left-arrow-line-symbol.svg);
 }
 
-
+/* 
 button:not(:first-child):not(:last-child){
-  /* animation: display_opacity_zoom 1s ease-out; */
-}
+  animation: display_opacity_zoom 1s ease-out;
+} */
 
 button:last-child{
   /* animation: display_button_next 1s ease;  */
@@ -302,11 +302,11 @@ button:last-child img{
   /* animation: display_schedule .3s ease; */
 }
 
-.schedule_close{
-  /* animation: close_schedule .3s ease;
-  animation-fill-mode: forwards; */
-  /* #87FFA7 <= Color for schedules */
-}
+/* .schedule_close{
+   animation: close_schedule .3s ease;
+  animation-fill-mode: forwards;
+ #87FFA7 <= Color for schedules 
+} */
 
 .close_button{
   width: 100%;
