Classes usage over random color changes.

--- a/Calendar/Calendar_Web_App/css/style.css
+++ b/Calendar/Calendar_Web_App/css/style.css
@@ -230,6 +230,10 @@ td:hover {
   background-color: rgba(112, 203, 255, 0.349);
 } 
 
+.weekend{
+color: lightsalmon;
+}
+
 .other_month {
   background: none;
   color: rgba(175, 175, 175, 0.45);
